1.2.2:
- improved wall kicks (2020/12/25 MS)
- added lock delay (2020/12/25 MS)
- allow more keys for controls (2020/12/25 MS)
- added hyper DAS option (2020/12/25 MS)

1.2.1:
- fixed build failure with gcc 4.8 (2020/07/27 Fabrice Fontaine)
- added training mode with optional zero gravity (2020/07/01 MS) 

1.2: 
- added classic game style: (2020/06/28 MS) 
  no wall-kicks, random pieces, no shadow piece, ...
- added auto-delay shift (das) and are (entry delay) 
- menu simplified
- code cleanups
- statistics for single player mode
- fixed compiler warnings

1.0.20:
- updated configure.in to configure.ac (2020/06/05 MS)
- added wide screen support (2020/06/05 MS)
- removed all inline keywords to work with GCC 5 (2015/05/16 MS)

1.0.19:
- removed link to lib math as not needed (2013/10/29 MS)
- reset key states when unpausing to prevent unwanted movement (2013/10/29 MS)

1.0.18:
- added vertical delay option (2011/10/29 MS)

1.0.17:
- shift block if rotation would fail because of boundary (2011/08/25 MS)
- allow leaving game over screen by any key not only ESC (2011/08/22 MS)
- made pause key configurable (2011/08/22 MS)

1.0.16:
- improved random number generator (2011/03/02 MS)
- generate pieces according to official Tetris guidelines (2011/03/02 Andrey
Maykov)
- always deal same sequence of pieces to all players (2011/03/02 MS)
- in expert mode deal most unsuitable piece out of current bag instead
  of random piece (2011/03/02 MS)

1.0.15:
- reenabled compiler option -Wall and fixed some warnings (20/09/10 MS)
- renamed (unused) full non-ascii turkish and portugese localizations to 
  prevent warnings (20/09/10 MS)
- added italian localization (20/09/10 Kenyu)

1.0.14:
- added missing include for locale (25/12/09 CT)
- fixed too short size in several memset calls (25/12/09 MS)
- increased range for horizontal block delay to 9 (24/12/09 CT)
- fixed incorrect english (penalty instead of malus) (24/12/09 CT)
- added XDG support (24/12/09 MS)

1.0.13: